fixed cursor hover animation not showing on login dialog buttons

--- a/frontend/styles/auth-dialog.css
+++ b/frontend/styles/auth-dialog.css
@@ -31,6 +31,10 @@
 	box-sizing: border-box;
 }
 
+button {
+	all: unset;
+}
+
 .heading {
 	font-size: 2rem;
 	margin-bottom: 20px;
