--- a/frontend/styles/cursor.css
+++ b/frontend/styles/cursor.css
@@ -16,9 +16,11 @@
 
 .after-image-shake {
   animation: shake 0.6s infinite;
+  z-index: 1000;
 }
 .after-image-after-shake {
   animation: after-shake 0.4s infinite;
+  z-index: 1000;
 }
 
 .cursor-after-image {
@@ -27,11 +29,13 @@
   height: calc(var(--paddle-width) * 1.2);
   background-color: rgba(255, 255, 255, 0.2);
   pointer-events: none;
+  z-index: 1000;
 }
 
 .cursor-after-image.enlarged {
   width: calc(var(--paddle-width) * 1.8);
   height: calc(var(--paddle-width) * 1.8);
+  z-index: 1000;
 }
 
 .cursor-after-image.yellow {
